# SK-FULL-10

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/SK_backend/: Cargo.toml
src/SK_backend/src/: main.rs
src/SK_backend/src/modules/: lands.rs  lib.rs  mod.rs  registration.rs  surveyor.rs  transactions.rs
src/SK_frontend/: index.html  package.json
src/SK_frontend/src/: App.jsx  index.scss  main.jsx
src/SK_frontend/src/Components/SearchBar/display/: display.component.jsx
src/SK_frontend/src/Components/SearchBar/thebar/: input.component.jsx
src/SK_frontend/src/Components/navigation/: navigation.style.css  navigation.style.css.map  navigation.style.scss
src/SK_frontend/src/Components/sliders/: slideritem.component.jsx
src/SK_frontend/src/Routes/Login/: getin.component.jsx
