[package]
name = "sk"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.3", features = ["tokio-tungstenite"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[lib]
name = "sk"
path = "src/lib.rs"

[[bin]]
name = "sk"
path = "src/main.rs" 